[tool.poetry]
name = "octopus-sensing-processing"
version = "1.0.0
description = "Web base data processing for https://octopus-sensing.nastaran-saffar.me"
authors = ["Aidin Gharibnavaz <aidin@aidinhut.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/octopus-sensing/octopus-sensing-processing"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
numpy = "^1.21.0"
CherryPy = "^18.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
octopus-sensing-processing = "octopus_sensing_processing.main:main"

[tool.autopep8]
max_line_length = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
